--- a/businessdomain/customer/src/main/resources/application.properties
+++ b/businessdomain/customer/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-#swagger-ui custom path
-springdoc.swagger-ui.path=/swagger.html
-#Disable swagger-ui
-springdoc.swagger-ui.enabled=true
 server.port=8081
+spring.application.name=businessdomain-customer
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
