--- a/businessdomain/pom.xml
+++ b/businessdomain/pom.xml
@@ -15,7 +15,7 @@
     <modules>
         <module>customer</module>
         <module>product</module>
-        <module>transactions</module>
+        <module>transaction</module>
     </modules>
 
 
@@ -39,12 +39,12 @@
 
     <dependencies>
 
-        <!-- <dependency>
+         <dependency>
              <groupId>org.springframework.cloud</groupId>
              <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
          </dependency>
 
-          <dependency>
+<!--          <dependency>
              <groupId>org.springframework.cloud</groupId>
              <artifactId>spring-cloud-starter-config</artifactId>
          </dependency>-->
