--- a/businessdomain/product/src/main/resources/application.properties
+++ b/businessdomain/product/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #swagger-ui custom path
-springdoc.swagger-ui.path=/swagger.html
+#springdoc.swagger-ui.path=/swagger.html
 #Disable swagger-ui
-springdoc.swagger-ui.enabled=true
+#springdoc.swagger-ui.enabled=true
 server.port=8083
+spring.application.name=businessdomain-product
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
